Drivers for Freestyle parameters in Render Layer panel don't appear in Graph Editor #36649

Closed
opened 2013-09-03 16:13:30 +02:00 by Shinsuke Irie · 7 comments
Member

%%%--- Operating System, Graphics card ---

Ubuntu 13.04 amd64 + GeForce GTX 670

- Blender version with error, and version that worked ---

Tested 2.67b and r59768

- Short description of error ---

I'd like to use drivers for Freestyle parameters in the Render Layer panel such as "Thickness" in the line style settings.
I can add a driver to the Freestyle parameter by selecting "Add Driver" in a right-click menu, but the driver doesn't appear in either the Graph Editor or the Outliner.
%%%

%%%--- Operating System, Graphics card --- Ubuntu 13.04 amd64 + GeForce GTX 670 - Blender version with error, and version that worked --- Tested 2.67b and r59768 - Short description of error --- I'd like to use drivers for Freestyle parameters in the Render Layer panel such as "Thickness" in the line style settings. I can add a driver to the Freestyle parameter by selecting "Add Driver" in a right-click menu, but the driver doesn't appear in either the Graph Editor or the Outliner. %%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%Many thanks for the problem report.
Fix for the bug in the Graph Editor was committed in the trunk revision 59785.
Better support for line styles in the Outliner was implemented in revision 59789.
Independent tests on your side would be much appreciated.%%%

%%%Many thanks for the problem report. Fix for the bug in the Graph Editor was committed in the trunk revision 59785. Better support for line styles in the Outliner was implemented in revision 59789. Independent tests on your side would be much appreciated.%%%
Author
Member

%%%Tested r59793.

The driver indeed appears in both the Graph Editor and the Outliner, but unfortunately it doesn't work. Variables in the driver take constant values of zero, and the driver value is not calculated and not used. The implementation seems still incomplete.

Attached a .blend file (freestyle_linestyle_thickness_driver_test.blend).
%%%

%%%Tested r59793. The driver indeed appears in both the Graph Editor and the Outliner, but unfortunately it doesn't work. Variables in the driver take constant values of zero, and the driver value is not calculated and not used. The implementation seems still incomplete. Attached a .blend file (freestyle_linestyle_thickness_driver_test.blend). %%%
Member

%%%Remember that there are some more drivers that doesn't appear in the Graph Editor as well. These are: all values for Metaballs and Speakers.
Regards.%%%

%%%Remember that there are some more drivers that doesn't appear in the Graph Editor as well. These are: all values for Metaballs and Speakers. Regards.%%%
Author
Member

%%%The commit r59785 fixed the issue about Speakers, too. It had been caused by the Freestyle merger in 2.67 release.

Metaballs seems still broken. This is another issue.
%%%

%%%The commit r59785 fixed the issue about Speakers, too. It had been caused by the Freestyle merger in 2.67 release. Metaballs seems still broken. This is another issue. %%%

%%%Fix in svn for the freestyle issue, as well as metaballs f-curves not showing up.%%%

%%%Fix in svn for the freestyle issue, as well as metaballs f-curves not showing up.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36649
No description provided.