Fix #36649: Drivers for Freestyle parameters in Render Layer panel don't appear in Graph Editor.

The channels define code in ANIM_init_channel_typeinfo_data() was not synchronized with the
definition of channel types (eAnim_ChannelType) in ED_anim_api.h.